fix streams and SSE

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./images/icon2.png">
-  <title>FFmpeg Stream Generator</title>
+  <link rel="icon" type="image/png" href="./images/icon2.png">
+   <title>FFmpeg Stream Generator</title>
   <style>
     * {
       box-sizing: border-box;
@@ -257,7 +257,7 @@
       <button type="button" onclick="buildFfmpegJson()">📄 צור JSON בלבד</button>
     </form>
 
-    <a id="downloadZip" href="#" download>Download Output Files</a>
+    <a id="downloadZip" href="#" download >Download Output Files</a>
 
     <div id="videoContainer">
       <h2>Preview</h2>
