fix recoerds and zip files

--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,7 @@
 
       <button type="submit">Generate Stream</button>
 
-      <button type="button" onclick="buildFfmpegJson()">📄 צור JSON בלבד</button>
+      <button type="button" onclick="buildFfmpegJson()">create JSON</button>
     </form>
 
     <a id="downloadZip" href="#" download >Download Output Files</a>
